--- a/desafios/d012/estilo.css
+++ b/desafios/d012/estilo.css
@@ -1,86 +1,65 @@
 @charset "UTF-8";
 
-body {
+* {
     margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    min-height: 100vh;
+    background-color: darkgray;
 }
 
 header {
     background-color: black;
-    text-align: center;
-    padding: 20px;
-    font-size: 20px;
-    
+    color: white;
+    text-align: center; 
 }
 
-header h1 {
-    color: whitesmoke;
-    margin: 0px;
-    margin-top: 20px;
-    }
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+}
 
-header p {
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
     color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+header a:hover, footer a:hover {
+    text-decoration: underline;
 }
 
 section {
-    padding: 10px;
+    padding-top: 10vh;
+    padding-left: 30px;
+    padding-bottom: 10vh;
+    line-height: 2em;
 }
 
-section p {
-    line-height: 50px;
-    font-size: 30px;
-    margin-left: 20px;
+section.normal {
+        background-color: white;
+        color: black;
 }
 
-section#cordel1 {
+section.imagem {
+    background-color: rgb(51, 51, 51);
     color: white;
-    background-image: url(imagens/background001.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
 }
 
-section#cordel2 {
-    color: white;
-    background-image: url(imagens/background002.jpg);
-    background-position: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.253);
+    width: 400px;
 }
-
-article {
-    width: 300px;
-    background-color: rgba(0, 0, 0, 0.648);
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    padding: 5px;
-   
-}
-
-article p {
-    padding: 0px 5px 0px;
-}
-
 
 footer {
-    text-align: center;
-    font-size: 20px;
     background-color: black;
+    color: white;
+    text-align: center;
     padding: 10px;
-}
-
-footer p {
-    color: white;
-    margin: 0px;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover {
-    text-decoration: underline;
 }
